--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "mogodb",
+  "name": "mysql",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx nodemon index.js"
   },
   "author": "malavika",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongodb": "^5.1.0",
-    "mongoose": "^7.0.2"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.2.4",
+    "swagger-ui-express": "^4.6.2"
   }
 }
